--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.0",
+    "connect-restreamer": "^1.0.1",
     "ember-cli": "0.2.0",
     "ember-cli-app-version": "0.3.2",
     "ember-cli-babel": "^4.0.0",
@@ -34,6 +35,10 @@
     "ember-cli-simple-auth-oauth2": "0.7.3",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.15",
-    "ember-export-application-global": "^1.0.2"
+    "ember-export-application-global": "^1.0.2",
+    "express": "^4.12.3",
+    "glob": "^4.5.3",
+    "morgan": "^1.5.2",
+    "torii": "^0.3.2"
   }
 }
